; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_setActive.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_setActive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32)* @setActive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setActive(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @g_signal_handler_block(%struct.TYPE_6__* %5, i32 %8)
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %11 = call i32 @GTK_TOGGLE_BUTTON(%struct.TYPE_6__* %10)
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @gtk_toggle_button_set_active(i32 %11, i32 %12)
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @g_signal_handler_unblock(%struct.TYPE_6__* %14, i32 %17)
  ret void
}

declare dso_local i32 @g_signal_handler_block(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @gtk_toggle_button_set_active(i32, i32) #1

declare dso_local i32 @GTK_TOGGLE_BUTTON(%struct.TYPE_6__*) #1

declare dso_local i32 @g_signal_handler_unblock(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
